--- a/main.tex
+++ b/main.tex
@@ -1,23 +1,51 @@
 \documentclass{book}
 \usepackage{graphicx} % Required for inserting images
+\usepackage{amsmath}
 \usepackage{enumerate}
 \usepackage{enumitem}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 
-\title{Sociology 141 Notes}
+\title{Sociology 141 - Social Movements \& Political Action}
 \author{Alejandro Sanchez Ocegueda}
 \date{Last updated: \today}
+
+\newcommand{\st}{$^{\text{st}}$}
+\newcommand{\nd}{$^{\text{nd}}$}
+\newcommand{\rd}{$^{\text{rd}}$}
+\renewcommand{\th}{$^{\text{th}}$}
 
 \begin{document}
 \maketitle
 
 \chapter{Social Movements \& Sociology}
+\input{lecture/1}
+\newpage
+\input{lecture/2}
 
 \chapter{The Power of Disruption: The Movement of the Unemployed}
 
+
+\newpage
 \chapter{Strategic \& Tactical Dynamics: The Civil Rights Movement}
 
 \chapter{Unintended Impacts: Countermovements \& Electoral Reverberations}
+
+\chapter{``Free Speech'': UC Berkeley from the FSM to the Palestine Solidarity Movement}
+
+\chapter{``Black Power'' and its Progenies: The Black Panther Party \& the New Left}
+
+\chapter{The Dynamics of Repression}
+
+\chapter{The Stonewall Riots \& the Gay and Trans Liberation Movements}
+
+\chapter{Occupy \& the ``Violence'' of Resistance}
+
+\chapter{The Dialectic of Repression \& Resistance: ``Black Power'' to ``Black Lives Matter''}
+
+\chapter{Indigenous Resistance: From ``Red Power'' to Standing Rock}
+
+\chapter{The Movement for Black Lives}
+
 
 
 
