--- a/reading/rg1-30.tex
+++ b/reading/rg1-30.tex
@@ -6,7 +6,7 @@
 
 \newcommand{\answer}{\textbf{Answer:}$\;$}
 
-\title{Sociology 141 Reading Response 1}
+\title{Sociology 141 Reading Guide 3}
 \author{Alejandro Sanchez Ocegueda}
 \date{January 30, 2025}
 
