--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,9 @@
-\documentclass{book}
+\documentclass[openany]{book}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{amsmath}
 \usepackage{enumerate}
 \usepackage{enumitem}
+\usepackage{tikz}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 
 \title{Sociology 141 - Social Movements \& Political Action}
@@ -17,9 +18,10 @@
 \begin{document}
 \maketitle
 
+\tableofcontents
+
 \chapter{Social Movements \& Sociology}
 \input{lecture/1}
-\newpage
 \input{lecture/2}
 
 \chapter{The Power of Disruption: The Movement of the Unemployed}
