--- a/reading/rg1-23.tex
+++ b/reading/rg1-23.tex
@@ -22,6 +22,9 @@
     Furthermore, the conditions under which the lower class can protest, efficacy of these protests, and the forms that it must take are all constrained by the underlying social structure in which they happen.
     Additionally, this social structure often makes these protests less widespread and less effective.
 
+    \textbf{Lecture discussion:} Protest is not a matter of free choice.
+    The main argumetn is that possibilities for protest movements are \textit{structurally shaped}.
+
     \item How do they characterize the \textbf{transformation of consciousness} that occurs with the emergence of a protest movement? (p. 3-5)
 
     \answer They give three criteria that must be met for a transformation of consciousness:
@@ -47,7 +50,7 @@
 
     \item Piven \& Cloward argue that protest movements are usually ``structurally precluded'' but that they do emerge under exceptional conditions.
     What are the \textbf{exceptional conditions} that allow for the \textbf{emergence} of movements?
-    \textit{(Note that they forward their argument by presenting and critiquing other prevailing theories.)} (p. 6-14) 
+    (\textit{Note that they forward their argument by presenting and critiquing other prevailing theories.}) (p. 6-14) 
 
     \answer The exceptional conditions are rapid and extraordinary disturbances in the larger society.
     They can be either economic---both improvement and deterioration of people's economic status---or they can be a shift in perspective of the social norms around them---the rules go from being just and immutable to suddenly becoming unjust and mutable.
