Add fancy titles

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,13 @@
 \usepackage{tikz}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 
+\usepackage{lipsum}
+\usepackage[Glenn]{fncychap}
+\renewcommand{\chaptername}{UNIT}
+\ChNameUpperCase
+\ChNumVar{\fontsize{40}{42}\usefont{OT1}{ptm}{m}{n}\selectfont}
+\ChTitleVar{\Large\sc}
+
 \title{Sociology 141 - Social Movements \& Political Action}
 \author{Alejandro Sanchez Ocegueda}
 \date{Last updated: \today}
