Minimal contribution to Reading Guide 3.

--- a/reading/rg1-28.tex
+++ b/reading/rg1-28.tex
@@ -2,6 +2,7 @@
 \usepackage{graphicx} % Required for inserting images
 \usepackage{enumerate}
 \usepackage{enumitem}
+\usepackage{amsmath}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 
 \newcommand{\answer}{\textbf{Answer:}$\;$}
@@ -18,33 +19,93 @@
     \item What do Piven \& Cloward say about \textbf{electoral politics}? (pp. 15-18)
 
     \answer 
+    Piven \& Cloward say that electoral politics are seen by the population as the only mechanism through which change can and should occur.
+    However, they also argue that poor people only really begin to have power when their discontent and unrest breaks out of the electoral sphere.
+
+    Moreover, they make comments on the fact that one of the earliest signs of popular discontent in the United States is a marked and sharp change in voting patterns.
+    They also comment on the fact that the usual empty promises made by political leaders only serve to fuel the rage of the masses.
+    This increases the risk of their discontent breaking out of the political realm and turning into what they call insurgent behavior.
+    They claim that these behaviors are not random, as most people would often believe, but that there is a pattern to when and how people resort to non-political methods of protest.
 
     \item How do Piven \& Cloward challenge the common association of protest movements with \textbf{violence}? (pp. 18-19)
 
     \answer 
+    Piven \& Cloward begin by recognizing where this association first comes from.
+    They explain that violence is often attributed to the `inchoate' or `disorganized' perception of social movements.
+    The usual chain of reasoning is something like
+    $$\text{Protest} \Leftrightarrow \text{Mob} \Leftrightarrow \text{Chaos} \Leftrightarrow \text{Violence}.$$
+    They then challenge this misconception by first explaining that often, social movements of poor people leave violence as a last resort simply because the risks are too great.
+    Historically, it is not the poor people who first result to violence, but rather the more powerful groups are the ones who initiate the violence by using physical force in an attempt to coerce them into being docile.
+
+    They also tackle the misconception that protests are chaotic.
+    They note the fallacy that while a disruption in social institutions and organizations is indeed a necessary precondition for social movements to arrive, it does not follow that the people who protest are acting in a disorganized manner.
+    In fact, Piven \& Cloward argue that it is most often people who have strong ties to their community who are capable of recognizing that their social standing is a direct result of the oppression of the ruling class, which in turn encourages them to join together in collective protest.
 
     \item 
     How do they explain particular \textbf{methods} adopted by protest movements?
     (\textit{``Why, in other words, do people sometimes strike and at other times boycott, loot, or burn?''}) (pp. 18-23)
 
     \answer
-
+    They explain that people's methods of protest are constrained by the structures around them.
+    The authors make three main observations of the factors that influence how people break out to protest outside of electoral politics:
+    \begin{enumerate}
+        \item People experience deprivation and oppression within a concrete setting;
+        that is, people will act out in defiance of what they immediately feel.
+        \item Institutional life determines how people are organized, and how they strike.
+        For instance, factory workers will be aggregated geographically and experientially based on their profession.
+        This allows them to share a common set of grievances and to perceive themselves as part of a collective struggle.
+        \item Institutional roles determine the opportunities for defiance.
+        For instance, workers strike because they are defying the rules and authorities within the workplace.
+        On the other hand, the unemployed cannot and do not strike.
+    \end{enumerate}
+    This is very well summarized in their second general point: 
+    \begin{center}
+    \textit{Simply put, people cannot defy institutions to which they have no access, and to which they make no contribution (p. 23).}
+    \end{center}
 
     \item According to Piven \& Cloward, how should we assess the \textbf{impacts} of protest movements? (pp. 23-24)
 
     \answer 
+    In their words, 
+    \begin{center}
+        \textit{It is our judgment that the most useful way to think about the effectiveness of protest is to examine the disruptive effects on institutions of different forms of mass defiance, and then to examine the political reverberations of those disruptions (p. 24).}
+    \end{center}
 
     \item How do they define/conceptualize \textbf{disruption}? (pp. 24-25)
 
     \answer
+    They first define disruption as the application of a negative sanction or the withdrawal of a critical contribution on which others depend.
+    Then, they discuss the influence of a disruption, and they give three crucial characteristics of this:
+    \begin{enumerate}
+        \item Whether the contribution withheld is crucial to others.
+        \item Whether or not those who have been affected have resources to be conceded.
+        \item Whether the obstructionist group can protect itself adequately from reprisals.
+    \end{enumerate}
+    They also remark that these factors explain why the poor have so little influence in their movements.
 
     \item What are the possible \textbf{responses} of \textbf{government officials} to disruption?
 
     \answer
+    Put simply, the possible responses of government officials are
+    $$\text{Ignore} \Rightarrow \text{Repress} \Rightarrow \text{Conciliate}.$$
+    They also outline some methods of conciliation.
+    They can either meet the demands of the people, they can coopt the movement, or they can attempt to undermine the sympathy that the protesting group has been able to command from a wider public.
 
     \item According to Piven \& Cloward, what factors lead to the \textbf{decline} of movements? (pp. 32-34)
 
     \answer
+    There are several factors that lead to a decline of movements.
+    Mainly, the groups in power will attempt to absorb the movement and redirect it into normal political channels, and to put the movement's leaders into stable institutional roles (for instance, unions).
+    They try to reintegrate the movement back into the status quo.
+    
+    Simultaneously, the government tries to isolate the movement from potential supporters, with the goal of diminishing morale.
+
+    Finally, the use of repressive force is used to subdue the few that remain.
+
+    More importantly, however, the political climate context in which the movement arose begins to change.
+    This makes it harder for new leaders to emerge if others are coopted, and it makes it so that the public sentiment towards the movement is that they have been catered to by the government, so they should stop being defiant.
+
+    
     
 \end{enumerate}
  
