--- a/reading/rg1-30.tex
+++ b/reading/rg1-30.tex
@@ -17,7 +17,18 @@
 \begin{enumerate}[label=\arabic*)]
     \item What do Piven \& Cloward tell us about the \textbf{relief system} in the U.S. during the Great Depression? (pp. 41-44)
 
-    \answer Piven
+    \answer 
+    There are many aspects of the relief system that Piven \& Cloward touch upon.
+    Firstly, they say that it was not quite as fleshed out as it is today.
+    It also did not cover as much ground as it did today, and places like New York and Philadelphia simply did not have such a thing as aid for the poor (p. 41).
+    Furthermore, the aid was given out infrequently, and only to people who for extraordinary circumstances (like disability) could not work, despite the fact that a large part of the population was unemployed.
+    
+    Another point that they make is that the relief system was deeply associated with shame.
+    The people in the care of the relief system were denied the franchise (*don't know what that means*), and they were also looked down upon.
+    Part of the job of the relief system was to create a demarcated ``pauper class'' that was so full of shame that poor workers would remain docile and not seek aid, for fear of becoming paupers themselves (p. 42-43).
+
+    These terrible conditions led to several poor and unemployed people mobilizing against the relief system, as described in pages 43 and 44.
+    It also sometimes brought about a transformation of consciousness, especially in areas where unemployment was particularly widespread.
 
     \item How do Piven \& Cloward explain the \textbf{emergence} of the Movement of the Unemployed? (pp. 44-49)
 
