More progress on reading guide 3

--- a/reading/rg1-30.tex
+++ b/reading/rg1-30.tex
@@ -32,7 +32,20 @@
 
     \item How do Piven \& Cloward explain the \textbf{emergence} of the Movement of the Unemployed? (pp. 44-49)
 
-    \answer 
+    \answer
+    Put simply, the Movement of the Unemployed came about as a consequence of the rapid deterioration in the quality of life of the millions of people who were suddenly left without a job during the Great Depression (pp. 44-48), along with a new collective consciousness that blamed the system rather than the individuals affected (p. 49).
+
+    In a period of only two years, millions of Americans suddenly found themselves out of a job and thrust into poverty.
+    These newly-unemployed people began to experience a sudden increase in hardships like hunger, the shame of unemployment, widespread divorces, desertions, poverty, and drunkenness.
+    
+    Furthermore, the narrative being put forth by the government and businesses was one of minimizing the problem and of blaming the citizens for their own misfortunes (p. 47, 49).
+    Due to the individualistic ideologies that are prevalent in American society, this narrative was believed for a long time.
+    As the depression worsened and more and more people became unemployed, however, the attitude of the unemployed also began to change.
+    In Piven \& Cloward's words:
+    \begin{center}
+        \textit{[The unemployed] began to define their personal hardship not just as their own individual misfortune, but as misfortune they shared with many of their own kind.
+        And if so many people were in the same trouble, then maybe it wasn't they who were to blame, but ``the system'' (p. 49)}
+    \end{center}
 
     \item What were the various \textbf{methods} (or tactics) utilized by the Movement of the Unemployed? (pp. 49-60)
 
