More progress on the reading response

--- a/reading/rg1-30.tex
+++ b/reading/rg1-30.tex
@@ -50,7 +50,29 @@
     \item What were the various \textbf{methods} (or tactics) utilized by the Movement of the Unemployed? (pp. 49-60)
 
     \answer
-
+    There were several methods that the Movement of the Unemployed used:
+    \begin{enumerate}
+        \item 
+        \textbf{Mob lootings:}
+        Lootings consisted of raiding markets, delivery trucks, and other establishments, mostly to obtain food supplies.
+        What makes these interesting is that the organized looting of food became a nation-wide phenomenon (p. 49).
+        \item
+        \textbf{Marches and political demonstrations:}
+        These mostly consisted of large numbers of unemployed people (in the thousands) who would walk out into the street and protest the unfairness of their living conditions.
+        A large number of demonstrations happened on March 6, 1930, which was declared 
+        Some of these marches were peaceful (e.g. the one in San Francisco), but others often broke out into violent conflict between protesters and the police.
+        The bloodiest encounter was in New York, where the police brutally attacked those who protested.
+        \item
+        \textbf{Rent riots:}
+        These consisted of impromptu gatherings of people to prevent families who had been evicted from being physically removed from their homes.
+        They were prevalent in Chicago.
+        They were often met with arrests, beatings, and even killings (p. 55), but they were also effective in letting tens of thousands of people keep their homes (p. 54), and they even forced relief officials to give out money for rent payments (p. 55).
+        \item \textbf{Relief insurgency:}
+        These consisted of masses of people asking for relief, and in collectively protesting and applying mass pressure to the relief offices whenever someone was denied their relief (pp. 56-57).
+        These were often organized and support by the Unemployed Councils of the city.
+        
+    \end{enumerate}
+    
     \item What is the significance of the \textbf{electoral instability} of 1932 in Piven \& Cloward's account? (pp. 64-68)
 
     \answer
@@ -58,6 +80,10 @@
     \item What \textbf{concessions} were won by the Movement of the Unemployed?
 
     \answer
+    Relief,
+    no evictions, 
+    food
+    
 
     \item In the 2020 interview with Piven, she draws some \textbf{parallels} between our \textbf{contemporary period} and the Movement of the Unemployed in the \textbf{1930s}.
     What do you think are some similarities?
