Finish reading guide 3

--- a/lecture/2.tex
+++ b/lecture/2.tex
@@ -1,4 +1,4 @@
-\counterwithout{section}{chapter}
+% \counterwithout{section}{chapter}
 
 \noindent \textbf{Lecture 2 --- January 23\rd}
 
@@ -56,9 +56,9 @@ Before people think that they can change their living situation to something bet
     \item \textit{Defiance is acted out collectively:}
     It is not only necessary that rules and norms are broken by the people, but that people engaging in this disobedience also believe that they are acting as part of a larger group or movement.
 \end{enumerate}
-Succinctly put, we can say 
+Succinctly, we can say 
 \begin{center}
-\textit{``A protest movement is collective defiance fueled by a transformation of consciousness (p. TODO).''}  
+\textit{``A protest movement is collective defiance fueled by a transformation of consciousness.''}  
 \end{center}
 
 
@@ -79,7 +79,11 @@ Piven \& Cloward give a characterization for the conditions necessary to spark a
     Informally, people's lives are thrown out of whack.
     This is often sufficient to cause a transformation of consciousness, of the kind we had defined and talked about at length previously.
     \item \textit{Division \& competition among elites:}
-    This will be explained in the next class.
+    The vested interest of the ruling class is in preserving the status quo.
+    Mostly, they are unified in their interest in maintaining the status quo.
+    Nonetheless, periods of massive economic change and social upheaval can create fissures among the elite class.
+    This can cause dissonance and delegitimize their authority.
+
 \end{enumerate}
 Once again, Piven \& Cloward provide us with a fancy quote to characterize these criteria:
 \begin{center}
