--- a/main.tex
+++ b/main.tex
@@ -38,9 +38,9 @@
     {\large \@author}}              
 \makeatother
 \author{%
+    Sociology 141 - Spring 2025 \\
     Alejandro Sanchez Ocegueda \\
     % Updated \today \\
-    Spring 2025 \\
     \texttt{alexso@berkeley.edu}\vspace{20pt}
     % Department name \\
     }
@@ -115,8 +115,13 @@
 \tableofcontents
 
 \chapter{Social Movements \& Sociology}
+This unit introduces the theoretical foundation for the class, drawn from Piven \& Cloward's seminal work \textit{Poor People's Movements: Why They Suceed, How They Fail}.
+The principal social movement studied in this unit is the Movement of the Unemployed, which took place during the Great Depression, largely due to a period of rapid economic and social change.
+\vspace{5mm}
+
 \input{lecture/1}
 \input{lecture/2}
+\input{lecture/3}
 
 % \chapter{The Power of Disruption: The Movement of the Unemployed}
 
