--- a/reading/rg1-30.tex
+++ b/reading/rg1-30.tex
@@ -76,19 +76,29 @@
     \item What is the significance of the \textbf{electoral instability} of 1932 in Piven \& Cloward's account? (pp. 64-68)
 
     \answer
+    The electoral instability resulted in a massive shift in power, from the Republican party to the Democratic party.
+    The Republicans had been in power since 1920, but the dire circumstances led to the election of Franklin Delano Roosevelt in 1932.
+    This was significant because FDR campaigned by promising to put people at the bottom of the economic pyramid first.
+    Not only that, he was the one to finally give concessions to the unemployed by providing relief and employment.
 
     \item What \textbf{concessions} were won by the Movement of the Unemployed?
 
     \answer
-    Relief,
-    no evictions, 
-    food
-    
+    The concessions that were won by the Movement of the Unemployed were the Federal Emergency Relief act, the Civilian Conservation Corps, and the Public Works Administration.
+    Concretely, these initiatives provided the unemployed with relief and jobs, which helped them improve their living situations.    
 
     \item In the 2020 interview with Piven, she draws some \textbf{parallels} between our \textbf{contemporary period} and the Movement of the Unemployed in the \textbf{1930s}.
     What do you think are some similarities?
 
     \answer
+    There are a couple of similarities I notice.
+    For one, there is a rising rate of unemployment, and a worsening of living conditions.
+    But more importantly, people are \textit{taking notice};
+    as Piven points out, ever since the Occupy movement, people have been quite aware and dissatisfied with the extreme levels of wealth inequality.
+    
+    Moreover, I have personally noticed that there is a transformation of consciousness going around, particularly online.
+    This may just be due to the kinds of websites I visit, but I do see a lot more people who begin to blame capitalism or other structural factors, for the deteriorating quality of living conditions, as opposed to the hyper-individualistic mindset that I saw a couple of years ago.
+    Also, the assassination of Brian Thompson showed very clearly that people are sick and tired of the predatory and abusive practices of businesses towards the working class.
     
 \end{enumerate}
  
