Add questions for a bunch of reading responses

--- a/main.tex
+++ b/main.tex
@@ -122,6 +122,7 @@ The principal social movement studied in this unit is the Movement of the Unempl
 \input{lecture/1}
 \input{lecture/2}
 \input{lecture/3}
+\input{lecture/4}
 
 % \chapter{The Power of Disruption: The Movement of the Unemployed}
 
