--- a/reading/rg1-30.tex
+++ b/reading/rg1-30.tex
@@ -24,7 +24,7 @@
     Furthermore, the aid was given out infrequently, and only to people who for extraordinary circumstances (like disability) could not work, despite the fact that a large part of the population was unemployed.
     
     Another point that they make is that the relief system was deeply associated with shame.
-    The people in the care of the relief system were denied the franchise (*don't know what that means*), and they were also looked down upon.
+    The people in the care of the relief system were denied the franchise, and they were also looked down upon.
     Part of the job of the relief system was to create a demarcated ``pauper class'' that was so full of shame that poor workers would remain docile and not seek aid, for fear of becoming paupers themselves (p. 42-43).
 
     These terrible conditions led to several poor and unemployed people mobilizing against the relief system, as described in pages 43 and 44.
