--- a/reading/rg2-4.tex
+++ b/reading/rg2-4.tex
@@ -7,45 +7,30 @@
 
 \newcommand{\answer}{\textbf{Answer:}$\;$}
 
-\title{Sociology 141 Reading Guide 2}
+\title{Sociology 141 Reading Guide 4}
 \author{Alejandro Sanchez Ocegueda}
-\date{January 28, 2025}
+\date{Februrary 4, 2025}
 
 \begin{document}
 
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item What is Piven \& Cloward's \textbf{critique} of \textbf{formal mass membership organizations}? (pp. xx-xxiii)
     
     \answer 
     
-    \item 
+    \item How does Piven \& Cloward's account of the Movement of the Unemployed illustrate their warning about the danger of \textbf{formal mass membership organizations}?
     
     \answer 
     
     
-    \item 
+    \item How do Piven \& Cloward explain the \textbf{decline} of the movement?
    
 
     \answer
     
-    \item 
-    
-    \answer 
-    
-    \item 
-    
-    \answer
-    
-
-    \item 
-    
-    \answer
-    
-    \item 
-    
-    \answer
+    \item According to Ciccarello-Maher, what is the ``\textbf{real lesson from Baltimore}''?
     
 \end{enumerate}
  
